tests/miniJava/pos/000279_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { java = 0 . java ( ) [ new int [ 0 ] ] ; } }
