tests/miniJava/neg/001153_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new java ( . ) ; } }
